rust/codec-html/src/snapshots/decode_html_articles@simple.html.snap
---
source: rust/codec-html/src/decode.rs
assertion_line: 625
expression: "decode(content, None).expect(\"Unable to decode HTML\")"
input_file: fixtures/articles/simple.html

---
{
  "type": "Article",
  "content": [
    {
      "type": "Heading",
      "content": [
        "Introduction"
      ],
      "depth": 1,
      "id": "introduction"
    },
    {
      "type": "Paragraph",
      "content": [
        "\n  A simple Markdown article for testing. When making changes please note that\n  test snapshots based on this fixture may need to be updated.\n"
      ]
    },
    {
      "type": "Heading",
      "content": [
        "Methods"
      ],
      "depth": 1,
      "id": "methods"
    },
    {
      "type": "Paragraph",
      "content": [
        "This is the methods section."
      ]
    },
    {
      "type": "Heading",
      "content": [
        "Results"
      ],
      "depth": 1,
      "id": "results"
    },
    {
      "type": "Paragraph",
      "content": [
        "The results include a table (Table 1)."
      ]
    },
    {
      "type": "Table",
      "rows": [
        {
          "type": "TableRow",
          "cells": [
            {
              "type": "TableCell",
              "cellType": "Header",
              "content": [
                "Group"
              ]
            },
            {
              "type": "TableCell",
              "cellType": "Header",
              "content": [
                "Value"
              ]
            }
          ],
          "rowType": "Header"
        },
        {
          "type": "TableRow",
          "cells": [
            {
              "type": "TableCell",
              "content": [
                "A"
              ]
            },
            {
              "type": "TableCell",
              "content": [
                "1.1"
              ]
            }
          ]
        },
        {
          "type": "TableRow",
          "cells": [
            {
              "type": "TableCell",
              "content": [
                "B"
              ]
            },
            {
              "type": "TableCell",
              "content": [
                "2.2"
              ]
            }
          ]
        }
      ]
    },
    {
      "type": "Heading",
      "content": [
        "Discussion"
      ],
      "depth": 1,
      "id": "discussion"
    },
    {
      "type": "Paragraph",
      "content": [
        "This is the conclusion section."
      ]
    }
  ]
}
