rust/codec-html/src/snapshots/decode_html_fragments@audio.html.snap
---
source: rust/codec-html/src/decode.rs
assertion_line: 632
expression: "decode_fragment(content, None)"
input_file: fixtures/fragments/html/audio.html

---
[
  {
    "type": "Paragraph",
    "content": [
      "\n  ",
      {
        "type": "AudioObject",
        "contentUrl": "audio.mp3"
      }
    ]
  }
]
