rust/codec-html/src/snapshots/decode_html_fragments@code-block.html.snap
---
source: rust/codec-html/src/decode.rs
assertion_line: 671
expression: "decode_fragment(content, None)"
input_file: fixtures/fragments/html/code-block.html
---
[
  {
    "type": "CodeBlock",
    "code": "Code with no language"
  },
  {
    "type": "CodeBlock",
    "code": "# Some Python code\n1 + 1\n",
    "programmingLanguage": "python"
  }
]
