rust/codec-html/src/snapshots/decode_html_fragments@code-fragment.html.snap
---
source: rust/codec-html/src/decode.rs
assertion_line: 671
expression: "decode_fragment(content, None)"
input_file: fixtures/fragments/html/code-fragment.html
---
[
  {
    "type": "Paragraph",
    "content": [
      "Some ",
      {
        "type": "CodeFragment",
        "code": "code"
      },
      " in a paragraph."
    ]
  },
  {
    "type": "Paragraph",
    "content": [
      "With a language ",
      {
        "type": "CodeFragment",
        "code": "1 + 1",
        "programmingLanguage": "python"
      },
      " specified."
    ]
  }
]
