rust/codec-html/src/snapshots/decode_html_fragments@delete.html.snap
---
source: rust/codec-html/src/decode.rs
assertion_line: 632
expression: "decode_fragment(content, None)"
input_file: fixtures/fragments/html/delete.html

---
[
  {
    "type": "Paragraph",
    "content": [
      "Some ",
      {
        "type": "Delete",
        "content": [
          "deleted"
        ]
      },
      " text."
    ]
  }
]
