rust/codec-html/src/snapshots/decode_html_fragments@emphasis.html.snap
---
source: rust/codec-html/src/decode.rs
assertion_line: 632
expression: "decode_fragment(content, None)"
input_file: fixtures/fragments/html/emphasis.html

---
[
  {
    "type": "Paragraph",
    "content": [
      "Some ",
      {
        "type": "Emphasis",
        "content": [
          "emphasized"
        ]
      },
      " text."
    ]
  }
]
