rust/codec-html/src/snapshots/decode_html_fragments@heading.html.snap
---
source: rust/codec-html/src/decode.rs
assertion_line: 632
expression: "decode_fragment(content, None)"
input_file: fixtures/fragments/html/heading.html

---
[
  {
    "type": "Heading",
    "content": [
      "Title of document"
    ],
    "depth": 1
  },
  {
    "type": "Paragraph",
    "content": [
      "The h1 tag is reserved for single use by the title. So a heading of depth 1 uses h2 etc"
    ]
  },
  {
    "type": "Heading",
    "content": [
      "Heading 1"
    ],
    "depth": 1
  },
  {
    "type": "Heading",
    "content": [
      "Heading 2"
    ],
    "depth": 2
  },
  {
    "type": "Heading",
    "content": [
      "Heading 3"
    ],
    "depth": 3
  },
  {
    "type": "Heading",
    "content": [
      "Heading 4"
    ],
    "depth": 4
  },
  {
    "type": "Heading",
    "content": [
      "Heading 5"
    ],
    "depth": 5
  },
  {
    "type": "Heading",
    "content": [
      "Heading with an id"
    ],
    "depth": 1,
    "id": "heading-with-an-id"
  }
]
