rust/codec-html/src/snapshots/decode_html_fragments@link.html.snap
---
source: rust/codec-html/src/decode.rs
assertion_line: 632
expression: "decode_fragment(content, None)"
input_file: fixtures/fragments/html/link.html

---
[
  {
    "type": "Paragraph",
    "content": [
      "A ",
      {
        "type": "Link",
        "content": [
          "link"
        ],
        "target": "https://stenci.la",
        "title": "Stencila"
      },
      "."
    ]
  },
  {
    "type": "Paragraph",
    "content": [
      "A ",
      {
        "type": "Link",
        "content": [
          "link"
        ],
        "target": ""
      },
      " with no target or title."
    ]
  },
  {
    "type": "Paragraph",
    "content": [
      "A ",
      {
        "type": "Link",
        "content": [
          "link"
        ],
        "target": "https://stenci.la"
      },
      " with no title."
    ]
  }
]
