rust/codec-html/src/snapshots/decode_html_fragments@list.html.snap
---
source: rust/codec-html/src/decode.rs
assertion_line: 632
expression: "decode_fragment(content, None)"
input_file: fixtures/fragments/html/list.html

---
[
  {
    "type": "List",
    "items": [
      {
        "type": "ListItem",
        "content": [
          {
            "type": "Paragraph",
            "content": [
              "apple"
            ]
          }
        ]
      },
      {
        "type": "ListItem",
        "content": [
          {
            "type": "Paragraph",
            "content": [
              "pear"
            ]
          }
        ]
      },
      {
        "type": "ListItem",
        "content": [
          {
            "type": "Paragraph",
            "content": [
              "orange"
            ]
          }
        ]
      }
    ],
    "order": "Unordered"
  },
  {
    "type": "List",
    "items": [
      {
        "type": "ListItem",
        "content": [
          {
            "type": "Paragraph",
            "content": [
              "first"
            ]
          }
        ]
      },
      {
        "type": "ListItem",
        "content": [
          {
            "type": "Paragraph",
            "content": [
              "second"
            ]
          }
        ]
      },
      {
        "type": "ListItem",
        "content": [
          {
            "type": "Paragraph",
            "content": [
              "third"
            ]
          }
        ]
      }
    ],
    "order": "Ascending"
  },
  {
    "type": "List",
    "items": [
      {
        "type": "ListItem",
        "content": [
          {
            "type": "Paragraph",
            "content": [
              "\n    nested\n    "
            ]
          },
          {
            "type": "List",
            "items": [
              {
                "type": "ListItem",
                "content": [
                  {
                    "type": "Paragraph",
                    "content": [
                      "\n        2a\n        "
                    ]
                  },
                  {
                    "type": "List",
                    "items": [
                      {
                        "type": "ListItem",
                        "content": [
                          {
                            "type": "Paragraph",
                            "content": [
                              "3a"
                            ]
                          }
                        ]
                      }
                    ],
                    "order": "Unordered"
                  }
                ]
              },
              {
                "type": "ListItem",
                "content": [
                  {
                    "type": "Paragraph",
                    "content": [
                      "2b"
                    ]
                  }
                ]
              },
              {
                "type": "ListItem",
                "content": [
                  {
                    "type": "Paragraph",
                    "content": [
                      "\n        2c\n        "
                    ]
                  },
                  {
                    "type": "List",
                    "items": [
                      {
                        "type": "ListItem",
                        "content": [
                          {
                            "type": "Paragraph",
                            "content": [
                              "\n            3b\n            "
                            ]
                          },
                          {
                            "type": "List",
                            "items": [
                              {
                                "type": "ListItem",
                                "content": [
                                  {
                                    "type": "Paragraph",
                                    "content": [
                                      "4a"
                                    ]
                                  }
                                ]
                              }
                            ],
                            "order": "Unordered"
                          }
                        ]
                      }
                    ],
                    "order": "Unordered"
                  }
                ]
              }
            ],
            "order": "Unordered"
          }
        ]
      }
    ],
    "order": "Unordered"
  },
  {
    "type": "List",
    "items": [
      {
        "type": "ListItem",
        "content": [
          {
            "type": "Emphasis",
            "content": [
              "solo inline"
            ]
          }
        ]
      }
    ],
    "order": "Ascending"
  }
]
