rust/codec-html/src/snapshots/decode_html_fragments@non-textual-annotation.html.snap
---
source: rust/codec-html/src/decode.rs
assertion_line: 632
expression: "decode_fragment(content, None)"
input_file: fixtures/fragments/html/non-textual-annotation.html

---
[
  {
    "type": "Paragraph",
    "content": [
      "Nontextual annotations like ",
      {
        "type": "NontextualAnnotation",
        "content": [
          "this"
        ]
      }
    ]
  }
]
