rust/codec-html/src/snapshots/decode_html_fragments@paragraph.html.snap
---
source: rust/codec-html/src/decode.rs
assertion_line: 632
expression: "decode_fragment(content, None)"
input_file: fixtures/fragments/html/paragraph.html

---
[
  {
    "type": "Paragraph",
    "content": [
      "First paragraph."
    ]
  },
  {
    "type": "Paragraph",
    "content": [
      "Second paragraph."
    ]
  },
  {
    "type": "Paragraph",
    "content": [
      "Third paragraph,\nsplit over multiple\nlines."
    ]
  }
]
